chore: fix failed test